build: update Maven modules